Laptop icon in head section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <title>Etrack - Property Management System</title>
-  </head>
+    <link rel="icon" href="./public/favicon1.ico" type="image/x-icon" >     <!-- added Laptop icon in the head -->
+   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
